--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
     <body>
 
         <h1>Hello World!</h1>
-        <script scr="/static/build/bundle.js"> </script>
+        <script src="/static/build/bundle.js"> </script>
 
     </body>
 </html>
