--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,9 @@
+<!-- HTML 執行在 Browser 環境-->
 <html>
-    <body>
+    <body id = 'root'>
 
-        <h1>Hello World!</h1>
-        <script src="/static/build/bundle.js"> </script>
+        <h1>Hello World!＠＠＠！</h1>
+        <script src="/static/build/bundle.js"> </script>    <!-- 網站上的根目錄/static/build/bundle.js -->
 
     </body>
 </html>
