--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,8 @@
 <!-- HTML 執行在 Browser 環境-->
 <html>
-    <body id = "root">
+    <body>
 
+        <div id = "root"></div>>
         <script src="/static/build/bundle.js"> </script>    <!-- 網站上的根目錄/static/build/bundle.js -->
 
     </body>
