--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html>
     <body>
 
-        <div id = "root"></div>>
+        <div id = "root"></div>
         <script src="/static/build/bundle.js"> </script>    <!-- 網站上的根目錄/static/build/bundle.js -->
 
     </body>
