--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,9 @@
 <!-- HTML 執行在 Browser 環境-->
 <html>
+    <head> 
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css"/>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"></script> 
+    </head>
     <body>
 
         <div id = "root"></div>
