--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,7 @@
 <html>
     <head> 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css"/>
+        <link rel="stylesheet" href="/static/css/main.css"/>        
     </head>
     <body>
 
